test: Refactor to Java 17 compatibility
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>