@@ -121,7 +121,7 @@ public class IncludeTextTest {
   }
 
   private Path createIncludeFile(Charset charset) throws IOException {
-    return Files.write(new File(tempDir, "include.txt").toPath(), DATA.getBytes(charset));
+    return Files.writeString(new File(tempDir, "include.txt").toPath(), DATA, charset);
   }
 
   private static class CharacterBufferContentHandler extends DefaultHandler {
